Add links and pictures

--- a/index.html
+++ b/index.html
@@ -60,13 +60,13 @@
   </header>
   <div class="container">
     <div class="row">
-      <a href="#hailey" class="box" id="hailey-link">
-        <img src="https://via.placeholder.com/100?text=Hailey" alt="Hailey" style="display:block;margin:0 auto 1rem;">
+      <a href="https://www.gsdigitalcookie.com/cookie/Landing/3/55250ee4-ea79-40a3-8ccc-5b0df2b049df/en-US" class="box" id="hailey-link">
+        <img src="hailey.png" alt="Hailey" style="display:block;margin:0 auto 1rem;">
         <h2>Hailey</h2>
         <p>Daisy Scout</p>
       </a>
-      <a href="#layla" class="box" id="layla-link">
-        <img src="https://via.placeholder.com/100?text=Layla" alt="Layla" style="display:block;margin:0 auto 1rem;">
+      <a href="https://www.gsdigitalcookie.com/cookie/Landing/3/20919177-1358-4e51-a9d7-27df61fefe84/en-US" class="box" id="layla-link">
+        <img src="layla.png" alt="Layla" style="display:block;margin:0 auto 1rem;">
         <h2>Layla</h2>
         <p>Brownie Scout</p>
       </a>
@@ -76,8 +76,8 @@
       </div>
   </div>
   <script>
-    const haileyUrl = "#hailey"; // placeholder
-    const laylaUrl = "#layla";   // placeholder
+    const haileyUrl = "https://www.gsdigitalcookie.com/cookie/Landing/3/55250ee4-ea79-40a3-8ccc-5b0df2b049df/en-US";
+    const laylaUrl = "https://www.gsdigitalcookie.com/cookie/Landing/3/20919177-1358-4e51-a9d7-27df61fefe84/en-US";
     document.getElementById('random-link').addEventListener('click', function(e) {
       e.preventDefault();
       const urls = [haileyUrl, laylaUrl];
