Grow image when hovered

--- a/index.html
+++ b/index.html
@@ -46,6 +46,14 @@
     .box:hover {
       background: #e8f5e9;
     }
+
+    .box img {
+      transition: transform 0.2s ease;
+    }
+
+    .box:hover img {
+      transform: scale(1.04);
+    }
     .random-box {
       margin-top: 1rem;
       background: #fffde7;
