Add mobile layout

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
       width: 50%;
       gap: 2rem;
       margin-bottom: 1rem;
+      max-width: 750px;
     }
     .box {
       flex: 1;
@@ -48,17 +49,44 @@
     }
 
     .box img {
+      width: 65%;
+      height: auto;
       transition: transform 0.2s ease;
     }
 
     .box:hover img {
       transform: scale(1.04);
     }
+
     .random-box {
       margin-top: 1rem;
       background: #fffde7;
       border-color: #ffb300;
       color: #ffb300;
+    }
+
+    .box .img-desktop, .box .img-mobile { margin: 1rem auto; }
+    .box .img-desktop { display: block; }
+    .box .img-mobile { display: none; }
+
+    @media (max-width: 1000px) {
+      .row {
+        flex-direction: column;
+        width: 90%;
+        gap: 1rem;
+      }
+
+      .box {
+        padding: 1.5rem;
+      }
+
+      .box img {
+        width: 50%;
+        max-width: 180px;
+      }
+
+      .box .img-desktop { display: none; }
+      .box .img-mobile { display: block; }
     }
   </style>
 </head>
@@ -69,12 +97,14 @@
   <div class="container">
     <div class="row">
       <a href="https://www.gsdigitalcookie.com/cookie/Landing/3/55250ee4-ea79-40a3-8ccc-5b0df2b049df/en-US" class="box" id="hailey-link">
-        <img src="hailey.png" alt="Hailey" style="display:block;margin:0 auto 1rem;">
+        <img class="img-desktop" src="hailey.png" alt="Hailey">
+        <img class="img-mobile" src="hailey_small.png" alt="Hailey">
         <h2>Hailey</h2>
         <p>Daisy Scout</p>
       </a>
       <a href="https://www.gsdigitalcookie.com/cookie/Landing/3/20919177-1358-4e51-a9d7-27df61fefe84/en-US" class="box" id="layla-link">
-        <img src="layla.png" alt="Layla" style="display:block;margin:0 auto 1rem;">
+        <img class="img-desktop" src="layla.png" alt="Layla">
+        <img class="img-mobile" src="layla_small.png" alt="Layla">
         <h2>Layla</h2>
         <p>Brownie Scout</p>
       </a>
