Move random button to top in mobile mode

--- a/index.html
+++ b/index.html
@@ -93,6 +93,10 @@
 
       .box .img-desktop { display: none; }
       .box .img-mobile { display: block; }
+
+      .container > .row:last-of-type {
+        order: -1;
+      }
     }
   </style>
 </head>
