Rearrange body elements
So random button is at the top. Also add instructive header.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,14 @@
       color: white;
       padding: 2rem;
       text-align: center;
-      font-size: 1.5rem;
+      font-size: 2rem;
+    }
+
+    h1 {
+      margin-bottom: 28px;
+      margin-top: 0;
+      max-width: 750px;
+      width: 50%;
     }
 
     .container {
@@ -105,6 +112,10 @@
     We are selling Girl Scout cookies to raise money for our troop!
   </header>
   <div class="container">
+    <h1 style="text-align: center; margin-top: 1rem;">Choose a sister to support. Cookies can be shipped or delivered in person.</h1>
+    <div class="row">
+      <a href="#random" class="box random-box" id="random-link">Can't decide? Choose at random!</a>
+    </div>
     <div class="row">
       <a href="https://www.gsdigitalcookie.com/cookie/Landing/3/55250ee4-ea79-40a3-8ccc-5b0df2b049df/en-US" class="box" id="hailey-link">
         <img class="img-desktop" src="hailey.png" alt="Hailey">
