--- a/index.html
+++ b/index.html
@@ -47,6 +47,13 @@
       max-width: 750px;
     }
 
+    .box.random-box {
+      margin-top: 1rem;
+      background: #fffde7;
+      border-color: #ffb300;
+      color: #ffb300;
+    }
+
     .box {
       flex: 1;
       background: white;
@@ -73,13 +80,6 @@
 
     .box:hover img {
       transform: scale(1.04);
-    }
-
-    .random-box {
-      margin-top: 1rem;
-      background: #fffde7;
-      border-color: #ffb300;
-      color: #ffb300;
     }
 
     .progress {
