Add title to progress bar
So hovering will show a tooltip with the bar's value.

--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
         <h2>Hailey</h2>
         <p>Daisy Scout</p>
         <div class="progress">
-          <progress value="43" max="160"></progress>
+          <progress value="43" max="160" title="43 / 160 boxes" aria-label="Progress: 43 of 160 boxes"></progress>
           <p class="goal">Goal: 160 boxes</p>
         </div>
       </a>
@@ -181,7 +181,7 @@
         <h2>Layla</h2>
         <p>Brownie Scout</p>
         <div class="progress">
-          <progress value="44" max="160"></progress>
+          <progress value="44" max="160" title="44 / 160 boxes" aria-label="Progress: 44 of 160 boxes"></progress>
           <p class="goal">Goal: 160 boxes</p>
         </div>
       </a>
